add generic index parser

--- a/Docs/UserGuide/fixingdata.tex
+++ b/Docs/UserGuide/fixingdata.tex
@@ -155,6 +155,24 @@ NAME           & \textit{\begin{tabular}[c]{@{}l@{}}EUHICP\\ EUHICPXT\\ FRHICP\\
 \label{tab:infl_indices}
 \end{table}
 
+\begin{table}[H]
+\centering
+\begin{tabular}{|l|l|}
+\hline
+\multicolumn{2}{|l|}{\textbf{Generic Indices of form GENERIC-NAME:}} \\
+\hline
+\textbf{Index Component} & \textbf{Allowable Values} \\
+\hline
+GENERIC          & Must be ``GENERIC'' (to denote a generic fixing) \\
+\hline
+NAME		     & Any string \\
+\hline
+\end{tabular}
+\caption{Allowable values for generic indices.}
+\label{tab:generic_indices}
+\end{table}
+
+
 % \begin{table}[H]
 % \centering
 %   \begin{tabu} to 0.9\linewidth {| X[-5,l,m] | X[-5,l,m] |}
