--- a/Docs/UserGuide/curve_configurations/yieldcurves.tex
+++ b/Docs/UserGuide/curve_configurations/yieldcurves.tex
@@ -410,7 +410,7 @@ The \lstinline!BootstrapConfig! has the following interpretation for a fitted bo
 When the node name is \lstinline!YieldPlusDefault!, the \lstinline!Type! node has the only allowable value \emph{Yield
  Plus Default}, and the node has the structure shown in Listing \ref{lst:yield_plus_default_segment}. This segment is
 used to build all-in discounting yield curves from a benchmark curve and (a weighted sum of) default curves. The
-construction is in some sense inverse to the benchmark default curve construction, see \ref{benchmark_default_curve}.
+construction is in some sense inverse to the benchmark default curve construction, see \ref{ss:benchmark_default_curve}.
 
 \begin{itemize}
 \item ReferenceCurve: the benchmark yield curve serving as the basis of the resulting yield curve
