fixed up fx asian option doc

--- a/Docs/UserGuide/tradecomponents/optiondata.tex
+++ b/Docs/UserGuide/tradecomponents/optiondata.tex
@@ -113,7 +113,7 @@ Asian FX Options &  \emph{Call}: The right to buy/receive the underlying currenc
 \item NoticeConvention [Optional]: The convention used to compute the notice date from the exercise date. Defaults to
   Unadjusted if not given.
 
-\item Settlement: Delivery type. 
+\item Settlement: Delivery type. Note that Settlement is not required for Asian options.
 
   Allowable values: \emph{Cash} or \emph{Physical}
 
