--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4605,7 +4605,7 @@ see \ref{md:equity_option_iv} for details of the market data.
     <DayCounter>Actual/365 (Fixed)</DayCounter>
     <MoneynessSurface>
       <QuoteType>ImpliedVolatility</QuoteType>
-      <VolatilityType>Lognormal</QuoteType>
+      <VolatilityType>Lognormal</VolatilityType>
       <MoneynessType>Fwd</MoneynessType>
       <MoneynessLevels>0.5,0.6,0.7,0.8,0.9,1.0,1.1,1.2,1.3,1.4,1.5</MoneynessLevels>
       <Expiries>*</Expiries>
