--- a/Docs/UserGuide/tradedata/bond.tex
+++ b/Docs/UserGuide/tradedata/bond.tex
@@ -3,7 +3,7 @@
 
 A Bond is set up using a {\tt BondData} block, and can be both a stand-alone instrument with trade type \emph{Bond}, or a trade component used by multiple bond derivative instruments.
 
-A Bond can be set up in a short version referencing an underlying bond static, or in a long version where the underlying bond details are specified explicitly.
+A Bond can be set up in a short version referencing an underlying bond static, or in a long version where the underlying bond details are specified explicitly, including a full LegData block.
 The short version is shown in listing \ref{lst:bonddata_refdata}. The details of the
 bond are read from the reference data in this case using the SecurityId as a key. The bond trade is fully specified by
 
@@ -80,7 +80,7 @@ See \lstinline!Date! in Table \ref{tab:allow_stand_data}.
 
 \end{itemize}
 
-A LegData block then defines the cashflow structure of the bond, this can be of type fixed, floating etc.
+A LegData block then defines the cashflow structure of the bond, this can be of type fixed, floating etc. Note that a LegData block should only be included in the long version. 
 
 \begin{listing}[H]
 %\hrule\medskip
