added cashflow leg to userguide and prod catalogue

--- a/Docs/UserGuide/tradecomponents/legdatanotionals.tex
+++ b/Docs/UserGuide/tradecomponents/legdatanotionals.tex
@@ -206,10 +206,12 @@ See Listing \ref{lst:paymentdates} for an example. \break
 \label{lst:paymentdates}
 \end{listing}
 
-\item FixedLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{fixed} It is
+\item FixedLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{Fixed} It is
 outlined in section \ref{ss:fixedleg_data}.
-\item FloatingLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{floating} It is
+\item FloatingLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{Floating} It is
 outlined in section \ref{ss:floatingleg_data} Floating Leg Data and Spreads.
+\item CashflowLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{Cashflow}. It is
+  outlined in section \ref{ss:cashflowlegdata}.
 \item CMSLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{CMS}. It is
   outlined in section \ref{ss:cmslegdata}.
 \item CMSSpreadLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{CMSSpread}. It is
