equitycliquetoption update, dividendfactor greater than zero, matching legs for indexings

--- a/Docs/UserGuide/tradecomponents/equityleg.tex
+++ b/Docs/UserGuide/tradecomponents/equityleg.tex
@@ -62,7 +62,7 @@ Here, the Notional is taken to be the Notional specified in the leg or - if the 
 
 \item DividendFactor [Optional]: Factor of dividend to be included in return. Note that the DividendFactor is only relevant when the ReturnType is set to  \emph{Total}. It is not used if the ReturnType is set to \emph{Price}.
 
-Allowable values: 0 $\leq$ DividendFactor $\leq$  1.   Defaults to \emph{1} if left blank or omitted.
+Allowable values: 0 $<$ DividendFactor $\leq$  1.   Defaults to \emph{1} if left blank or omitted.
 
 \item ValuationSchedule [Optional]: Schedule of dates for equity valuation.
 
