[touch:1349]keep backwards compatibility

--- a/Docs/UserGuide/conventions.tex
+++ b/Docs/UserGuide/conventions.tex
@@ -649,8 +649,8 @@ The meaning of the elements is as follows:
   representing a period. The index name can contain an optional tag ``CCY-CMS-TAG-TENOR'' which is an arbitrary label
   that allows to define more than one swap index per currency.
 \item Conventions: A swap convention defining the index conventions.
-\item FixingCalendar [Optional]: The fixing calendar for the swap index fixings publication. If not given, the fixing
-  calendar of the Ibor index given in the swap conventions is used as a fall back.
+\item FixingCalendar [Optional]: The fixing calendar for the swap index fixings publication. If not given, the fixed leg
+  calendar from the swap conventions will be used as a fall back.
 \end{itemize}
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
